welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: not found: value ousideMode
	if (ousideMode==false && n>=1 && n<= 10)
            ^in1To10:4: error: not found: value ousideMode
	if (ousideMode==true && {n<=1 || n>=10})
            ^